# Sandbox-Project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: isolation.h  limits.h  sandbox.h  threading.h  utils.h
rootfs/lib/: ld-linux-aarch64.so.1  libc.so.6  libsystemd.so.0
src/: isolation.c  limits.c  main.c  sandbox.c  server.c  threading.c  utils.c
tests/: test_limits.c  test_utils.c
